--- a/LiveInLife/app/src/main/AndroidManifest.xml
+++ b/LiveInLife/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.company.samsalvail.liveinlife">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PostingActivity"></activity>
+        <activity android:name=".PostingActivity" />
+        <activity android:name=".VenueListViewActivity"></activity>
     </application>
 
 </manifest>
