implement full application missing quality of life measure

--- a/LiveInLife/app/src/main/AndroidManifest.xml
+++ b/LiveInLife/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".PostingActivity" />
-        <activity android:name=".VenueListViewActivity"></activity>
+        <activity android:name=".VenueListViewActivity" />
+        <activity android:name=".CityInfoActivity"></activity>
     </application>
 
 </manifest>
